# file-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  notebook-1.ipynb  pyproject.toml
file_extractor/: __init__.py
file_extractor/app/: extractor.py
file_extractor/tools/: pdf_extractor.py  vectore_store.py  word_extractor.py
notebooks/: notebook-1.ipynb
source/docs/: Kompilasi Tabel HC.docx
